# ASTRA

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
airi/: __init__.py  cli.py  doctor.py
astra/: cli.py  config.py  doctor.py  logging_setup.py  report.py  router.py  sectors.py
astra/airi/: __init__.py  __main__.py  contract.py  stub.py
astra/core/: reporting.py
astra/game/: __init__.py  achievements.py  actions.py  balance.py  context.py  engine.py  events.py  logbook.py  loop.py  migrations.py  policy.py  progression.py  quests.py  reducer.py  registry.py  replay.py  result.py  rng.py  rules.py  sectors.py  state.py  storage.py  validate.py
astra/integration/: airi_bridge.py  airi_client.py
astra/screens/: airi.py  bridge.py  game.py  lore.py  settings.py
astra_airi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/adr/: 0001-monorepo-astra-airi.md
tests/: test_actions.py  test_actions_v2.py  test_airi_contract.py  test_astra_boot.py  test_boot.py  test_cli.py  test_engine_seed.py  test_events.py  test_game.py  test_migrations.py  test_profiles.py  test_registry.py  test_report.py  test_rng_v2.py  test_rules_replay.py  test_sectors_cli.py  test_sectors_policy.py  test_snapshot_replay.py  test_validate_v2.py
tools/: hotfix_events_engine.py  sprint15.py  sprint2c.py  sprint2d.py  sprint2e.py  sprint2f.py  sprint2g.py  sprint2h.py  sprint2i.py  sprint2j.py  sprint2k.py  sprint2m.py  sprint2o.py  sprint2q.py
(+5 files in other folders)
