[project]
name = "astra-airi"
version = "0.0.1"
requires-python = ">=3.12"
description = "ASTRA (HUB) + AIRI (agent) monorepo, local-first."
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]