[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-airi"
version = "0.0.15"
requires-python = ">=3.12"
description = "ASTRA(HUB)+AIRI(agent) monorepo, local-first."
readme = "README.md"

[tool.setuptools.packages.find]
include = ["airi", "astra", "astra_common"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["tools/*", "astra_airi.egg-info/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]